--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -5,14 +5,14 @@
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow">
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                <div class="itemBoxTable__bodyCellInner">
+                <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                   <input type="search" class="JS_appNav__filterInput" placeholder="filter through smarlists">
 
                 </div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
-                <div class="itemBoxTable__bodyCellInner">
+                <div class= "itemBoxTable__bodyCellInner">
 
                   <i class="">ञ</i>
 
@@ -28,7 +28,7 @@
       <div class="itemBoxTable__body">
         <ul class="itemBoxTable__bodyRow">
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+            <div class= "itemBoxTable__bodyCellInner">
               <i class="">ऄ My private smartlists</i>
             </div>
           </li>
@@ -38,7 +38,7 @@
             <div class="itemBoxTable__body">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -55,7 +55,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
 
                         <div class="pmx-selector pmx-selector--readonly">
@@ -73,7 +73,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -90,7 +90,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -107,7 +107,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -124,7 +124,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -144,7 +144,7 @@
         </div><!-- /.itemBox--children -->
         <ul class="itemBoxTable__bodyRow">
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+            <div class= "itemBoxTable__bodyCellInner">
               <i class="">ऄ My shared smartlists</i>
             </div>
           </li>
@@ -154,7 +154,7 @@
             <div class="itemBoxTable__body">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -171,7 +171,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -188,7 +188,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -205,7 +205,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -222,7 +222,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -242,7 +242,7 @@
         </div><!-- /.itemBox--children -->
         <ul class="itemBoxTable__bodyRow">
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+            <div class= "itemBoxTable__bodyCellInner">
               <i class="">ऄ Smartlists shared with me</i>
             </div>
           </li>
@@ -252,7 +252,7 @@
             <div class="itemBoxTable__body">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -269,7 +269,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -286,7 +286,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -303,7 +303,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -320,7 +320,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -337,7 +337,7 @@
               </ul>
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner">
+                  <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
 
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
