_includes: Removing pmx_field and pmx_field--inner

--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -5,28 +5,22 @@
         <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
 
-            <div class="pmx-field">
-              <div class="pmx-field__inner">
-                <div class="pmx-field__value">
-                  <div class="pmx-selector">
-                    <div class="pmx-selector__item pmx-selector__item--selected">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
-                      </div>
-                    </div>
-                  </div>
+            <div class="pmx-selector">
+              <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
                 </div>
               </div>
             </div>
 
+            <div class="pmx-selector pmx-selector--readonly">
+              <div class="pmx-selector__item">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field ">282
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
@@ -41,28 +35,22 @@
         <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
 
-            <div class="pmx-field">
-              <div class="pmx-field__inner">
-                <div class="pmx-field__value">
-                  <div class="pmx-selector">
-                    <div class="pmx-selector__item pmx-selector__item--selected">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">297
-                      </div>
-                    </div>
-                  </div>
+            <div class="pmx-selector">
+              <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
                 </div>
               </div>
             </div>
 
+            <div class="pmx-selector pmx-selector--readonly">
+              <div class="pmx-selector__item">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field ">297
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
@@ -71,9 +59,7 @@
           </div>
         </li>
       </ul>
-      {% include blocks/popup/ms-tags-colors-color-sublist.html %}
-
-      {% include blocks/popup/ms-create-new.html %}
+      {% include blocks/popup/ms-tags-colors-color-sublist.html %} {% include blocks/popup/ms-create-new.html %}
 
     </div>
   </div>
