App-nav-tab1: title for group part of toggle now

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -27,20 +27,9 @@
     <div class="itemBoxTable">
       <div class="itemBoxTable__body">
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">अ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">.TenForceWiki</div>
-                  </div>
-                </div>
-              </div>
+              <i class="JS_itemBoxTable__bodyCellInner--text">अ .TenForceWiki</i>
             </div>
           </li>
         </ul>
@@ -117,20 +106,9 @@
         </div>
 
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">अ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing &amp; Design</div>
-                  </div>
-                </div>
-              </div>
+              <i class="JS_itemBoxTable__bodyCellInner--text">अ Marketing &amp; Design</i>
             </div>
           </li>
         </ul>
@@ -168,20 +146,9 @@
         </div>
 
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">अ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Operations</div>
-                  </div>
-                </div>
-              </div>
+              <i class="JS_itemBoxTable__bodyCellInner--text">अ Operations</i>
             </div>
           </li>
         </ul>
@@ -336,20 +303,9 @@
         </div>
 
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">अ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">pmX Projects and Support</div>
-                  </div>
-                </div>
-              </div>
+              <i class="JS_itemBoxTable__bodyCellInner--text">अ pmX Projects and Support</i>
             </div>
           </li>
         </ul>
@@ -582,20 +538,9 @@
         </div>
 
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">अ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Product Development</div>
-                  </div>
-                </div>
-              </div>
+              <i class="JS_itemBoxTable__bodyCellInner--text">अ Product Development</i>
             </div>
           </li>
         </ul>
@@ -789,20 +734,9 @@
         </div>
 
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">अ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Prof. Serv.</div>
-                  </div>
-                </div>
-              </div>
+              <i class="JS_itemBoxTable__bodyCellInner--text">अ Prof. Serv.</i>
             </div>
           </li>
         </ul>
@@ -892,20 +826,9 @@
         </div>
 
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action">अ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner ">
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Semantic Technology</div>
-                  </div>
-                </div>
-              </div>
+              <i class="JS_itemBoxTable__bodyCellInner--text">अ Semantic Technology</i>
             </div>
           </li>
         </ul>
