--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -27,14 +27,9 @@
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-            <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--selectedText">
-              <i>Selected</i>
+              <i class="itemBoxTable__action--toggle">ऄ Selected</i>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -100,14 +95,9 @@
         <!-- /.itemBox selection-->
 
         <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-            <div class="itemBoxTable__bodyCellInner">
-              <i>All</i>
+              <i class="itemBoxTable__action--toggle">ऄ All</i>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -125,13 +115,10 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                    <i class="itemBoxTable__action--toggle">अ Main attributes</i>
                   </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Main attributes</div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
@@ -283,13 +270,10 @@
               <!-- /.itemBox -->
 
               <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                    <i class="itemBoxTable__action--toggle">अ Who is involved</i>
                   </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Who is involved</div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
@@ -360,13 +344,10 @@
               </div>
               <!-- /.itemBox -->
               <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                    <i class=" itemBoxTable__action--toggle">अ Tracking and tracing</i>
                   </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Tracking and tracing</div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
@@ -442,13 +423,10 @@
               </div>
               <!-- /.itemBox -->
               <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                    <i class=" itemBoxTable__action--toggle">अ Time and effort</i>
                   </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Time and effort</div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
@@ -504,13 +482,10 @@
               </div>
               <!-- /.itemBox -->
               <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                    <i class="itemBoxTable__action--toggle">अ Other</i>
                   </div>
-                </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner">Other</div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
