upgrading remove action icons

--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -25,7 +25,7 @@
         </li>
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+            <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
           </div>
         </li>
       </ul>
