--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -34,7 +34,7 @@
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
+              <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">—</i>
             </div>
           </li>
         </ul>
@@ -53,7 +53,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -69,7 +69,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -85,7 +85,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -102,7 +102,7 @@
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
+              <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
@@ -122,7 +122,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
@@ -140,7 +140,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
@@ -260,7 +260,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
@@ -277,7 +277,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
@@ -335,7 +335,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
