--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -35,7 +35,7 @@
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
+              <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">—</i>
             </div>
           </li>
         </ul>
@@ -70,7 +70,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -105,7 +105,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -140,7 +140,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -158,7 +158,7 @@
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
             <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
+              <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
@@ -196,7 +196,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -256,7 +256,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -286,7 +286,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
