Added colorToggle in separate file to reduce repeated html structure

--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -4,14 +4,7 @@
       <ul class="itemBoxTable__bodyRow JS_bodyRow--suggestion">
         <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-            <div class="pmx-selector">
-              <div class="pmx-selector__item pmx-selector__item--selected">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                </div>
-              </div>
-            </div>
+            {% include javascript/colorToggle.html color="#0bda51" %}
 
             <div class="pmx-selector pmx-selector--readonly">
               <div class="pmx-selector__item">
@@ -34,14 +27,7 @@
       <ul class="itemBoxTable__bodyRow JS_bodyRow--suggestion">
         <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-            <div class="pmx-selector">
-              <div class="pmx-selector__item pmx-selector__item--selected">
-                <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                </div>
-              </div>
-            </div>
+            {% include javascript/colorToggle.html color="#00bfff" %}
 
             <div class="pmx-selector pmx-selector--readonly">
               <div class="pmx-selector__item">
