--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -46,13 +46,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle ">
-                    <div class="pmx-selector">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                        </div>
-                      </div>
-                    </div>
+                    {% include javascript/colorToggle.html color="#f4ca16" %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
                         <div class="pmx-selector__block">
@@ -78,15 +72,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-                    <div class="pmx-selector">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
-                        </div>
-                      </div>
-                    </div>
-
+                    {% include javascript/colorToggle.html color="#e30022" %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
                         <div class="pmx-selector__block">
@@ -113,14 +99,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-                    <div class="pmx-selector">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                        </div>
-                      </div>
-                    </div>
+                    {% include javascript/colorToggle.html color="#0bda51" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -174,14 +153,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-                    <div class="pmx-selector">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                        </div>
-                      </div>
-                    </div>
+                    {% include javascript/colorToggle.html color="#0bda51" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -205,14 +177,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-                    <div class="pmx-selector">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                        </div>
-                      </div>
-                    </div>
+                    {% include javascript/colorToggle.html color="#00bfff" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -235,14 +200,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-                    <div class="pmx-selector">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                        </div>
-                      </div>
-                    </div>
+                    {% include javascript/colorToggle.html color="#f4ca16" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -265,14 +223,7 @@
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-
-                    <div class="pmx-selector">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
-                        </div>
-                      </div>
-                    </div>
+                    {% include javascript/colorToggle.html color="#e30022" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
