Adding new item: support both colorToggle and colorPrefix

--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,10 +1,11 @@
 <ul class="itemBoxTable__bodyRow JS_filterableCell">
   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
     <div class="itemBoxTable__bodyCellInner ${excludeClass}">
+      ${colorToggleHTML}
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            ${colorHTML}
+            ${colorPrefixHTML}
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">${textOfActionItem}</div>
           </div>
         </div>
