--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,50 +1,60 @@
-
-
-<!-- CDN FOR TABS -->
+<!-- CDN OR USED PLUGINS NOT MADE BY US -->
+<!-- cdn for animations -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
 
-<!-- ALL FOR STICKY -->
+<!-- local jquery sticky plugin files -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
 
-<!-- MULITPLE SCROLLABLE CONTENT -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/multipleScrollable.js"></script>
 
+
+
+<!-- OUR PLUGINS/COMPONENTS USED IN EVERY PAGE -->
+<!-- expand-collapse -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+
+<!-- selector -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
+
+<!-- filters -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
+
+<!-- new multiselect -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
+
+<!-- new SingleSelect -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
+
+<!-- colorpicker -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
+
+
+<!-- OUR PLUGINS/COMPONENTS _NOT_ USED IN EVERY PAGE -->
+<!-- new app page -->
 {% if page.title == 'New App' %}
+
+  <!-- multiple scrollable content -->
+  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/multipleScrollable.js"></script>
+
   <!-- Sticky scroll -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
-  <!-- expand-collapse -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+
   <!-- toggle panels -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
   <!-- tabs -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
   <!-- breadcrumb -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
-  <!-- filters -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
-  <!-- selector -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-  <!-- new multiselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-  <!-- new SingleSelect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
-  <!-- colorpicker -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
-
 {% endif %}
 
+<!-- old app or item detail page -->
 {% if page.title == 'Old App' or page.title == 'Item detail' %}
   <!-- Sticky scroll -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/scroll.js"></script>
-
-  <!-- expand-collapse -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 
   <!-- toggle panels -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
@@ -52,91 +62,21 @@
   <!-- tabs -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
 
-  <!-- selector -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-  <!-- new multiselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-
   <!-- OLD COMPONENTS -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
-    <!-- filters -->
-    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 {% endif %}
 
+<!-- itembox page -->
 {% if page.title == 'Itembox' %}
-  <!-- expand-collapse -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 
-  <!-- selector -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-
-  <!-- new multiselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-
-  <!-- filters -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 {% endif %}
 
+<!-- components or filter page -->
 {% if page.title == 'Components' or page.title == 'Filter' %}
-  <!-- expand-collapse -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 
-  <!-- selector -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-
-  <!-- new multiselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-  <!-- new SingleSelect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newSingleSelect.js"></script>
-
-  <!-- colorpicker -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
-
-  <!-- filters -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 {% endif %}
 
-{% if page.title == 'Popups' %}
-  <!-- expand-collapse -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
-
-  <!-- selector -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-
-  <!-- new multiselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-
-  <!-- filters -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
-{% endif %}
-
+<!-- tag-picker -->
 {% if page.title == 'Tag-picker' %}
-  <!-- expand-collapse -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 
-  <!-- selector -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
-
-  <!-- new multiselect -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselectPopup.js"></script>
-
-  <!-- filters -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
-
-  <!-- colorpicker -->
-  <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 {% endif %}
