--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,6 +1,6 @@
 <ul class="itemBoxTable__bodyRow JS_filterableCell">
-  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-    <div class="itemBoxTable__bodyCellInner ${excludeClass}">
+  <li class="itemBoxTable__bodyCell ${colorToggleTriggerClass}" style="flex-grow: 1;">
+    <div class="itemBoxTable__bodyCellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
       ${colorToggleHTML}
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
