Fixed color change in suggestions, missing JS_itemBoxTable__bodyCellInner--text

--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -9,7 +9,7 @@
             <div class="pmx-selector pmx-selector--readonly">
               <div class="pmx-selector__item">
                 <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field ">282
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
                   </div>
                 </div>
               </div>
@@ -32,7 +32,7 @@
             <div class="pmx-selector pmx-selector--readonly">
               <div class="pmx-selector__item">
                 <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field ">297
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">297
                   </div>
                 </div>
               </div>
