Making sure we use the same and-or selector everywhere

--- a/_includes/javascript/and-or-selector.html
+++ b/_includes/javascript/and-or-selector.html
@@ -1,17 +1,13 @@
-<li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
-  <div class="itemBoxTable__bodyCellInner">
-    <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-      <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
-        <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
-        </div>
+  <div class="pmx-selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleselect JS_selector">
+    <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+      <div class="pmx-selector__block">
+        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
       </div>
-      <div class="pmx-selector__itemSeperator"></div>
-      <div class="pmx-selector__item JS_selectorItem">
-        <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
-        </div>
+    </div>
+    <div class="pmx-selector__itemSeperator"></div>
+    <div class="pmx-selector__item JS_selectorItem">
+      <div class="pmx-selector__block">
+        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
       </div>
     </div>
   </div>
-</li>
