--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -35,21 +35,7 @@
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-
-                  <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-                    <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
-                      <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
-                      </div>
-                    </div>
-                    <div class="pmx-selector__itemSeperator"></div>
-                    <div class="pmx-selector__item JS_selectorItem">
-                      <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
-                      </div>
-                    </div>
-                  </div>
-
+              {% include javascript/and-or-selector.html %}
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -70,21 +56,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-                          <div class="pmx-selector__item JS_selectorItem">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
-                            </div>
-                          </div>
-                          <div class="pmx-selector__itemSeperator"></div>
-                          <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
-                            </div>
-                          </div>
-                        </div>
-
+                    {% include javascript/and-or-selector.html %}
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -150,23 +122,7 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-
-
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-                          <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
-                            </div>
-                          </div>
-                          <div class="pmx-selector__itemSeperator"></div>
-                          <div class="pmx-selector__item JS_selectorItem">
-                            <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
-                            </div>
-                          </div>
-                        </div>
-
-
+                    {% include javascript/and-or-selector.html %}
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
